Fix: message sorting in chat and emoji picker layout issues in thread

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -247,6 +247,7 @@ body {
 
 /* Picker-Container */
 .emoji-mart {
+  width: 286px !important;
   background: #fff !important;
   color: #000 !important;
   border: 1px solid var(--background-color);
